--- a/index.html
+++ b/index.html
@@ -1,47 +1,16 @@
 <!DOCTYPE html>
+<!--brfc digital signage website-->
 <html>
-	<head>
-		<meta http-equiv="refresh" content="3600">
-		<link rel="stylesheet" href="css/styleone.css">
-		<script src="scripts/presentation.js" type="text/javascript"></script>
-		<title>EZScreens</title>
-	</head>
-	<body>
-		
-		<img id="header" src="images/header.png" width="100%" height="100%">
-		<div id="time">
-		<div id="dateBox"></div>
 
-		<script type="text/javascript">
-		GetDate();
-		setInterval(GetDate,1000);
-		</script>
-		
-		<div id="timeBox"></div>
-		
-		<script type="text/javascript">
-		GetTime();
-		setInterval(GetTime,1000);
-		</script>
+<head>
+<meta http-equiv="refresh" content="10">
+<link rel="stylesheet" type="text/css" href="stylesheets/mystyles.css"/>
+<title>BRFC Signage</title>
+</head>
+<body>
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTIb9WGOBCRg-v3PNgUNPkoaJUdi2lSH8W73qg29dYp4IvBNT8wk-m4Fs1yqrsYt4sUn08fPkalC3zz/embed?start=true&loop=true&delayms=10000&rm=minimal"  width="100%" height="100%" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+<div id="border">
+</div>
+</body>
 
-		</div>
-		
-		<div id="letter">
-		<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTSK1hIM_JfRM4SjZrpwthOmmH0ktqqs0ReuDZrRf-dAE_rkJzYT_JqzC6B55rT7TuzCVaeK3D_Ocr8/embed?start=true&loop=true&delayms=60000&rm=minimal" frameborder="0px" width="101%" height="101%" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-		</div>
-
-		
-		<div id="whiteBar">
-		</div>
-		
-		<div id="sidebarLeft">
-		<p id="demo"></p>
-		<iframe id="slideShow" src="https://docs.google.com/presentation/d/e/2PACX-1vRz2lEApWdNG2c1t0ReUYmO_WbepGzMHViT72fgRXUHJ7LTxkOEimAtJrPft_9t-C6sV9jsqDcR0CKY/embed?start=true&loop=true&delayms=5000&rm=minimal" frameborder="0" width="97%" height="97%" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-		</div>		
-		
-		<div id="sidebarRight">
-		<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRCZogRltCQxt_Kdn7tF1IYfyVJeGHUYhU4Mdgwixo7l0pXsiczr2EyZuTiPah7S9ZVStVqtAS7RIp2/embed?start=true&loop=true&delayms=60000&rm=minimal" frameborder="0px" width="100%" height="100%" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-		</div>
-		<script src="scripts/presentation.js" type="text/javascript"></script>
-	</body>
 </html>
